@@ -16,7 +16,12 @@
   * Support parsing git mbox patches without a version tail, as generated by
     Mercurial.  (Jelmer Vernooij)
 
+ DOCUMENTATION
+
   * Run the tutorial inside the test suite. (Jelmer Vernooij)
+
+  * Reorganized the tutorial. (Jelmer Vernooij)
+
 
 0.6.2	2010-10-16
 
